# whif

./: .gitignore  Cargo.toml  README.md  cargo-check-updates
sendzinc/: Cargo.toml  README.md
sendzinc/src/: blint.rs  lib.rs
sendzinc/src/linear/: binary.rs
singred/: Cargo.toml  README.md
singred/run/: mid-test-jump.sh  mid-test.sh
singred/src/: ad_hoc.rs  main.rs
whif/: Cargo.toml
whif/src/: error.rs  io.rs  lib.rs
