[package]

name = "whif_singred"
version = "0.0.1-pre"
description = "WIP"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/whif"
readme = "README.md"

[dependencies]

tracing = "0.1"
num = "0.4"
nalgebra = "0.29"
whif = { path = "../whif" }
whif_sendzinc = { path = "../sendzinc" }
